2009-01-17  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #2370: Pi1 is always USER_INT
	* Updated manual with the information about configuring the advanced search form
	* Fixed bug #1937: little changes in the manual
	* Added hook to preprocess htdb:/ URLs (for www.calis.lv)

2009-01-16  Dmitry Dulepov  <dmitry@typo3.org>

	* Implemented advanced search form and custom search limits
	* Fixed bug #3240: Indication of number of found items

2009-01-15  Dmitry Dulepov  <dmitry@typo3.org>

	* Added title field to the indexing config (to be used in the advanced search form)
	* Added site selector to TS and HTML templates
	* Added site selector procesing to the form (untested)

2009-01-07  Dmitry Dulepov  <dmitry@typo3.org>

	* Removed hook definition for TCEMain's processCmdMap because it was not used
	* Fixed bug #2417: mnoGoSearch + TemplaVoila cause wrong RealURL paths
	* Updated dependency for pagepath extension to 0.1.3
	* Updated code for displaying result time and clones
	* Fixed bug #2368: Error in TS object browser
	* Fixed bug #2341: template.html does not validate
	* Released version 2.1.6
	* Fixed wrong XCLASSes

2008-12-12  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug: if title field for the records is empty, HTDBDoc produces error in CLI script

2008-12-11  Dmitry Dulepov  <dmitry@typo3.org>

	* Added new column to the records indexing to allow recording "Last modified" time for records
	* Changed index on tx_mnogosearch_urllog

2008-12-10  Dmitry Dulepov  <dmitry@typo3.org>

	* Updated manual with the information about TYPO3SEARCH_xxx and more advanced https:// indexing
	* Updated manual: added information about conflict with nc_staticfilecache
	* Updated manual: added information about indexing files without using HTTP
	* Deleted old manual
	* Released version 2.1.5
	* Added new markers (date and size) to the output
	* Added "Last-modified" header generation while indexing (only if not set already)