@@ -4,6 +4,7 @@
 	* Updated manual with the information about configuring the advanced search form
 	* Fixed bug #1937: little changes in the manual
 	* Added hook to preprocess htdb:/ URLs (for www.calis.lv)
+	* Added a function too obtain controller from view in hooks
 
 2009-01-16  Dmitry Dulepov  <dmitry@typo3.org>
 
